--- a/css/index.css
+++ b/css/index.css
@@ -87,3 +87,9 @@
     color: orange;
     font-size: 18px;
 }
+
+a:hover img{
+    opacity: 0.7;
+    /* filter: brightness(70%); */
+    /* transition: all 0.5s ease; */
+}
