--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .keyFrame{
     width: 100vw;
-    background-image:linear-gradient(rgba(93, 93, 93, 0.1),rgba(93, 93, 93, 0.1)), url('./img/cover4.jpg') ;
+    background-image:linear-gradient(rgba(93, 93, 93, 0.1),rgba(93, 93, 93, 0.1)), url('../img/cover4.jpg') ;
     background-position: bottom center;
     background-size: cover;
 }
