--- a/css/utils.css
+++ b/css/utils.css
@@ -42,3 +42,20 @@
 .nav-title:hover{
     color: #f7965ad0;
 }
+
+/* spacing */
+.mt-6{
+    margin-top:3.5rem
+}
+
+.mt-7{
+    margin-top:4rem
+}
+
+.mt-8{
+    margin-top:4.5rem
+}
+
+.mt-9{
+    margin-top:5rem
+}
