--- a/css/utils.css
+++ b/css/utils.css
@@ -1,3 +1,12 @@
+
+pre.language-js.line-numbers {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+
 .bg-orange{
     background-color: #e9ad634d;
 }
