--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,7 @@
 
 a:hover img{
     opacity: 0.7;
+    /* transition: all ease 0.5s; */
     /* filter: brightness(70%); */
     /* transition: all 0.5s ease; */
 }
