scale 與統計資料

--- a/css/utils.css
+++ b/css/utils.css
@@ -23,6 +23,10 @@ pre.language-js.line-numbers {
     background-color: white;
 }
 
+.bg-lightOrange{
+    background-color: #fcf1e3;
+}
+
 .h-100vh{
     height: 100vh;
 }
